<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.aluno.sistemacadastraldepessoafisica.InserirPessoaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:id="@+id/editText_Nome"
            android:contentDescription="Nome"
            android:hint="@string/nome" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:id="@+id/editText_Cpf"
            android:contentDescription="Cpf"
            android:tag="Cpf"
            android:hint="@string/cpf" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:id="@+id/editText_Idade"
            android:contentDescription="Idade"
            android:tag="Idade"
            android:hint="@string/idade" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:id="@+id/editText_Telefone"
            android:contentDescription="Telefone"
            android:hint="@string/telefone" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:id="@+id/editText_Email"
            android:contentDescription="Email"
            android:hint="@string/email" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">
        <Button
            android:text="Salvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_Salvar"
            android:onClick="salvar" />

        <Button
            android:text="Buscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_buscar"
            android:onClick="buscarPorNome" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <Button
            android:text="Excluir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:onClick="excluir" />

        <Button
            android:text="Listar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            android:onClick="listar" />
    </LinearLayout>

</LinearLayout>
